--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* this css is for styling */
 *{
     margin:0;
     padding:0;
@@ -41,7 +42,7 @@ body{
     animation: shake linear 1s infinite;
  }
  .wheel1 img{
-    width: 70px;
+    width: 71px;
     position: relative;
     top: 42px;
     left: 46px;
